# HASS-PatchPilot

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  HOME_ASSISTANT_TOOLING.md  README.md  hacs.json  info.md  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg
.github/workflows/: build.yaml
custom_components/auto_update_manager/: README.md  __init__.py  config_flow.py  const.py  manager.py  manifest.json  sensor.py  services.yaml
custom_components/patchpilot/: README.md  __init__.py  binary_sensor.py  button.py  config_flow.py  const.py  entity.py  icons.json  manager.py  manifest.json  presentation.py  repairs.py  sensor.py  strings.json  switch.py  update_logic.py
custom_components/patchpilot/translations/: en.json
docs/superpowers/plans/: 2026-06-21-usability-and-ui.md
docs/superpowers/specs/: 2026-06-21-usability-and-ui-design.md
tests/: test_presentation.py  test_project_structure.py  test_update_logic.py
